--- a/src/js/components/form/KLMultiSelect/index.html
+++ b/src/js/components/form/KLMultiSelect/index.html
@@ -45,7 +45,7 @@
                 	{#if multiple}
                 	<kl-check checked={cate[checkKey]} on-check={this.checkCate(cate, level, cate[checkKey])}  readonly={readonly} ></kl-check>
                     {/if}
-                    <span {#if !multiple} class="cateName"  {/if}>{cate[nameKey]}</span>
+                    <span {#if !multiple} class="cateName"  {/if} title={cate[nameKey]}>{cate[nameKey]}</span>
                     {#if cate[childKey] && cate[childKey].length}<span class="more" r-class={{onlyChild:!multiple && !onlyChild}} {#if !multiple && !onlyChild} on-click={this.viewCate(cate, level, true, $event)} {/if}><kl-icon type="chevron_right" /></span>{/if}
                 </li>
                 {/if}
