--- a/src/js/components/form/KLMultiSelect/index.html
+++ b/src/js/components/form/KLMultiSelect/index.html
@@ -40,7 +40,7 @@
             <ul r-animation="on: leave; class: animated fadeOutX fast;">
                 <kl-input value={search[level]}  readonly={readonly}></kl-input>
                 {#list tree[level] | search : search[level],level as cate}
-                {#if !filter || (filter && filter(cate))}
+                {#if !filter || (filter && filter(cate, cate_index))}
                 <li class="f-csp {cate.active?'active':''}" on-click={this.viewCate(cate, level)}>
                 	{#if multiple}
                 	<kl-check checked={cate[checkKey]} on-check={this.checkCate(cate, level, cate[checkKey])}  readonly={readonly} ></kl-check>
