--- a/src/js/components/form/KLMultiSelect/index.html
+++ b/src/js/components/form/KLMultiSelect/index.html
@@ -37,7 +37,7 @@
         <div class="cateWrap">
             {#list 0..9 as level}
             {#if tree[level] && tree[level].length}
-            <ul r-animation="on: leave; class: animated fadeOutX fast;">
+            <ul r-animation="on: leave; class: animated fadeOutX fast;" r-width={ulWidth}>
                 <kl-input value={search[level]}  readonly={readonly}></kl-input>
                 {#list tree[level] | search : search[level],level as cate}
                 {#if !filter || (filter && filter(cate, cate_index))}
